# hello_world_etc

./: CMakeLists.txt  InputOutputPractice.cpp  README.md  main.cpp  stringyPractice.h
src/: CodilityPractice.cpp  CodilityPractice.h  InputOutputPractice.h  main.cpp  stringyPractice.cpp
test/: test_helloWorld.cpp
